Fix the time segment pruner on TIMESTAMP data type